<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jugnoo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    
    
    <!-- <string name="google_maps_api_key">AIzaSyCq8gpxpimVz88o9K0FnLTWRjpgEPy2eW0</string> Live -->
    <string name="google_maps_api_key">AIzaSyCgijCQEJumfXprpDygpCzQmzy7VfJRaVQ</string> <!-- Dev -->
    
    <string name="google_maps_browser_key">AIzaSyAPIQoWfHI2iRZkSV8jU4jT_b9Qth4vMdY</string>
    
    
    
    
	<!-- <string name="fb_app_id">782131025144439</string> -->
	<string name="fb_app_id">782131025144439</string>
    
	
	
    <string name="rupee">\u20B9</string> 
    
    <string name="rupee_0">\u20B9 0.0</string> 
    
	
	<string name="language_english_text">English</string>
	<string name="language_hindi_text">हिंदी</string>
	
	
	
	    <!-- \n\nPeople with autos can offer rides to users who find taxis a bit too expensive. -->
	
	<string name="about_1_text">Jugnoo helps you provide a friendly and affordable ride within the Chandigarh tricity area.\nThe rates are affordable, and definitely a good deal when you get them for a friendly ride.</string>
	<string name="about_2_text">Rate card</string>
	<string name="about_3_text">First 2 kms: Rs.30\nAfter 2 kms: Rs. 10/km\nWaiting time: Rs.1.5/min after 15 minutes.</string>
	
	
	<string name="email_id">Email ID</string>
	<string name="password">Password</string>
	<string name="sign_in">Sign In</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="sign_up">Sign Up</string>
	<string name="or">OR</string>
	<string name="sign_in_with_facebook">Sign in with Facebook</string>
	
	<string name="save_to_favorite">Save To Favorite</string>
	<string name="enter_name_for_favorite">Enter Name for Favorite</string>
	
	<string name="ok">OK</string>
	
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="phone_number">Phone number</string>
	<string name="confirm_password">Confirm Password</string>
	
	<string name="confirmation_code">Confirmation Code</string>
	<string name="check_your_registered_email_phone_number_for_otp">Check your registered email/phone number for OTP</string>
	<string name="enter_code">Enter Code</string>
	<string name="done">Done</string>
	
	<string name="no_driver_available">No Driver Available</string>
	<string name="no_driver_available_message">Currently there are no drivers available nearby within 3km. We will look into it</string>
	
	<string name="logout">Logout</string>
	<string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
	
	<string name="cancel">Cancel</string>
	
	<string name="select_language">Select Language</string>
	
	<string name="enter_email">Enter Email</string>
	<string name="send_email">Send Email</string>
	
	<string name="favorites">Favorites</string>
	<string name="no_favorite_locations_added">No favorite locations added.</string>
	
	<string name="from">From: </string>
	<string name="to">To: </string>
	
	<string name="rides">Rides</string>
	<string name="no_rides_currently">No rides currently.</string>
	
	<string name="history">History</string>
	<string name="missed">Missed</string>
	<string name="no_missed_rides_currently">No missed rides currently.</string>
	
	<string name="update">Update</string>
	
	<string name="driver_mode">Driver Mode</string>
	<string name="jugnoo_on">Jugnoo ON</string>
	<string name="driver_type">Driver Type</string>
	<string name="ride_type">Ride Type</string>
	<string name="invite_friends">Invite Friends</string>
	<string name="about">About</string>
	<string name="support">Support</string>
	<string name="sos">SOS</string>
	<string name="language_preferences">Language Preferences</string>
	
	<string name="ride_in_progress">Ride in progress...</string>
	
	<string name="click_to_view">Click to view</string>
	
	<string name="start_ride">Start Ride</string>
	
	<string name="end_ride">End Ride</string>
	
	<string name="reached_destination">Reached Destination</string>
	<string name="distance">Distance</string>
	<string name="wait_time">Wait Time</string>
	<string name="fare">Fare</string>
	
	<string name="driver_rating">Driver Rating</string>
	<string name="customer_rating">Customer Rating</string>
	
	<string name="request_ride">Request Ride</string>
	<string name="assigning_driver">Assigning driver...</string>
	
	<string name="no_drivers_nearby">No drivers nearby.</string>
	<string name="could_not_find_nearest_driver_distance">Could not find nearest driver\'s distance.</string>
	<string name="nearest_driver_is">Nearest driver is</string>
	<string name="away">away.</string>
	
	<string name="cancel_request_in">Cancel request in </string>
	
	<string name="your_ride_is">Your ride is </string>
	<string name="away_and_will_arrive"> away and will arrive in approximately </string>
	
	<string name="will_arrive_in">Will arrive in </string>
	
	<string name="call_driver">Call Driver</string>
	
	<string name="you_have">You have </string>
	<string name="ride_request"> ride request</string>
	
	<string name="accept_ride">Accept Ride</string>
	<string name="cancel_request">Cancel Request</string>
	
	<string name="cancel_ride">Cancel Ride</string>
	
	
	<string name="rating"> Rating</string>
	<string name="call">Call</string>
	
	<string name="ride_time">Ride Time</string>
	
	<string name="start_wait">Start wait</string>
	<string name="stop_wait">Stop wait</string>
	
	<string name="submit">Submit</string>
	
	<string name="search_results">Search results</string>
	<string name="search">Search</string>
	
	<string name="your_login_session_expired">Your Login session has expired. Please login again.</string>
	
	<string name="alert">Alert</string>
	
	<string name="start_ride_error">You must be present near the customer pickup location to start ride.</string>
	
	
	<string name="server_error">Server error. Please try again later.</string>
	<string name="server_not_responding">Oops!! Server not responding. Please try again later.</string>
	<string name="check_internet_message">Check your internet connection.</string>
	
	
	<string name="check_all">Check All</string>
	<string name="uncheck_all">Uncheck All</string>
	
	
	
	
	
	
	<string-array name="CountryCodes" >
<item>93,AF</item>
<item>355,AL</item>
<item>213,DZ</item>
<item>376,AD</item>
<item>244,AO</item>
<item>672,AQ</item>
<item>54,AR</item>
<item>374,AM</item>
<item>297,AW</item>
<item>61,AU</item>
<item>43,AT</item>
<item>994,AZ</item>
<item>973,BH</item>
<item>880,BD</item>
<item>375,BY</item>
<item>32,BE</item>
<item>501,BZ</item>
<item>229,BJ</item>
<item>975,BT</item>
<item>591,BO</item>
<item>387,BA</item>
<item>267,BW</item>
<item>55,BR</item>
<item>673,BN</item>
<item>359,BG</item>
<item>226,BF</item>
<item>95,MM</item>
<item>257,BI</item>
<item>855,KH</item>
<item>237,CM</item>
<item>1,CA</item>
<item>238,CV</item>
<item>236,CF</item>
<item>235,TD</item>
<item>56,CL</item>
<item>86,CN</item>
<item>61,CX</item>
<item>61,CC</item>
<item>57,CO</item>
<item>269,KM</item>
<item>242,CG</item>
<item>243,CD</item>
<item>682,CK</item>
<item>506,CR</item>
<item>385,HR</item>
<item>53,CU</item>
<item>357,CY</item>
<item>420,CZ</item>
<item>45,DK</item>
<item>253,DJ</item>
<item>670,TL</item>
<item>593,EC</item>
<item>20,EG</item>
<item>503,SV</item>
<item>240,GQ</item>
<item>291,ER</item>
<item>372,EE</item>
<item>251,ET</item>
<item>500,FK</item>
<item>298,FO</item>
<item>679,FJ</item>
<item>358,FI</item>
<item>33,FR</item>
<item>689,PF</item>
<item>241,GA</item>
<item>220,GM</item>
<item>995,GE</item>
<item>49,DE</item>
<item>233,GH</item>
<item>350,GI</item>
<item>30,GR</item>
<item>299,GL</item>
<item>502,GT</item>
<item>224,GN</item>
<item>245,GW</item>
<item>592,GY</item>
<item>509,HT</item>
<item>504,HN</item>
<item>852,HK</item>
<item>36,HU</item>
<item>91,IN</item>
<item>62,ID</item>
<item>98,IR</item>
<item>964,IQ</item>
<item>353,IE</item>
<item>44,IM</item>
<item>972,IL</item>
<item>39,IT</item>
<item>225,CI</item>
<item>81,JP</item>
<item>962,JO</item>
<item>7,KZ</item>
<item>254,KE</item>
<item>686,KI</item>
<item>965,KW</item>
<item>996,KG</item>
<item>856,LA</item>
<item>371,LV</item>
<item>961,LB</item>
<item>266,LS</item>
<item>231,LR</item>
<item>218,LY</item>
<item>423,LI</item>
<item>370,LT</item>
<item>352,LU</item>
<item>853,MO</item>
<item>389,MK</item>
<item>261,MG</item>
<item>265,MW</item>
<item>60,MY</item>
<item>960,MV</item>
<item>223,ML</item>
<item>356,MT</item>
<item>692,MH</item>
<item>222,MR</item>
<item>230,MU</item>
<item>262,YT</item>
<item>52,MX</item>
<item>691,FM</item>
<item>373,MD</item>
<item>377,MC</item>
<item>976,MN</item>
<item>382,ME</item>
<item>212,MA</item>
<item>258,MZ</item>
<item>264,NA</item>
<item>674,NR</item>
<item>977,NP</item>
<item>31,NL</item>
<item>599,AN</item>
<item>687,NC</item>
<item>64,NZ</item>
<item>505,NI</item>
<item>227,NE</item>
<item>234,NG</item>
<item>683,NU</item>
<item>850,KP</item>
<item>47,NO</item>
<item>968,OM</item>
<item>92,PK</item>
<item>680,PW</item>
<item>507,PA</item>
<item>675,PG</item>
<item>595,PY</item>
<item>51,PE</item>
<item>63,PH</item>
<item>870,PN</item>
<item>48,PL</item>
<item>351,PT</item>
<item>1,PR</item>
<item>974,QA</item>
<item>40,RO</item>
<item>7,RU</item>
<item>250,RW</item>
<item>590,BL</item>
<item>685,WS</item>
<item>378,SM</item>
<item>239,ST</item>
<item>966,SA</item>
<item>221,SN</item>
<item>381,RS</item>
<item>248,SC</item>
<item>232,SL</item>
<item>65,SG</item>
<item>421,SK</item>
<item>386,SI</item>
<item>677,SB</item>
<item>252,SO</item>
<item>27,ZA</item>
<item>82,KR</item>
<item>34,ES</item>
<item>94,LK</item>
<item>290,SH</item>
<item>508,PM</item>
<item>249,SD</item>
<item>597,SR</item>
<item>268,SZ</item>
<item>46,SE</item>
<item>41,CH</item>
<item>963,SY</item>
<item>886,TW</item>
<item>992,TJ</item>
<item>255,TZ</item>
<item>66,TH</item>
<item>228,TG</item>
<item>690,TK</item>
<item>676,TO</item>
<item>216,TN</item>
<item>90,TR</item>
<item>993,TM</item>
<item>688,TV</item>
<item>971,AE</item>
<item>256,UG</item>
<item>44,GB</item>
<item>380,UA</item>
<item>598,UY</item>
<item>1,US</item>
<item>998,UZ</item>
<item>678,VU</item>
<item>39,VA</item>
<item>58,VE</item>
<item>84,VN</item>
<item>681,WF</item>
<item>967,YE</item>
<item>260,ZM</item>
<item>263,ZW</item>
</string-array>
	
</resources>
