<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative"
    android:layout_width="720px"
    android:layout_height="1134px"
    android:background="@drawable/common_bg"
    android:orientation="vertical"
        android:splitMotionEvents="false" >

        <RelativeLayout
        android:id="@+id/topRl"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:splitMotionEvents="false" >

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="82px"
            android:layout_centerVertical="true"
            android:text="Back"
            android:background="@drawable/transparent"
            android:textColor="@drawable/blue_alpha_color_selector"
            android:textSize="@dimen/button_text_size"
             />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="REGISTER"
            android:textColor="@color/blue_btn"
            android:textSize="@dimen/button_text_size" />
    </RelativeLayout>
    
    <ScrollView 
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:splitMotionEvents="false"
        >
    
    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:splitMotionEvents="false" >

        <Button
            android:id="@+id/registerWithFacebookBtn"
            android:layout_width="648px"
            android:layout_height="99px"
            android:layout_marginTop="20px"
            android:background="@drawable/blue_dark_btn_selector"
            android:text="REGISTER WITH FACEBOOK"
            android:textColor="@drawable/white_color_selector"
                        android:textSize="@dimen/button_text_size" 
         />
        
        
        <RelativeLayout 
            android:id="@+id/orDivRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
        android:splitMotionEvents="false"
            
            >
             
            
             <ImageView 
            android:layout_width="248px"
            android:layout_height="3px"
            android:background="@drawable/divider_small"
            android:layout_centerVertical="true"
            android:layout_marginLeft="36px"
            />
            
             
             
            
            
            <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="50px"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="30px" 
            
            />
            
            
            
             <ImageView 
            android:layout_width="248px"
            android:layout_height="3px"
            android:background="@drawable/divider_small"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="36px"
            />
            
            
        </RelativeLayout>
        
        <LinearLayout
            android:id="@+id/etLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20px"
            android:gravity="center_horizontal"
            android:orientation="vertical" 
        android:splitMotionEvents="false">

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="650px"
                android:layout_height="100px"
                android:hint="Name"
                android:singleLine="true"
                android:textSize="34px"
                android:textColor="@color/black"
            	android:background="@drawable/white_bg_rounded"
                android:capitalize="words"
                android:paddingLeft="20px"
                android:paddingRight="20px"
                 />

            

            <EditText
                android:id="@+id/emailIdEt"
                android:layout_width="650px"
                android:layout_height="100px"
                android:hint="@string/email_id"
                android:singleLine="true"
                android:textSize="34px"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
            	android:background="@drawable/white_bg_rounded"
                android:paddingLeft="20px"
                android:paddingRight="20px"
            android:layout_marginTop="5px"
                  />
            
            

            <EditText
                android:id="@+id/phoneNoEt"
                android:layout_width="650px"
                android:layout_height="100px"
                android:hint="@string/phone_number"
                android:singleLine="true"
                android:textSize="34px" 
                android:textColor="@color/black"
                android:inputType="phone"
                android:maxLength="14"
            	android:background="@drawable/white_bg_rounded"
                android:paddingLeft="20px"
                android:paddingRight="20px"
            android:layout_marginTop="5px"
                 />
            

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="650px"
                android:layout_height="100px"
                android:hint="@string/password"
                android:singleLine="true"
                android:textSize="34px" 
                android:textColor="@color/black"
                android:inputType="textPassword"
            	android:background="@drawable/white_bg_rounded"
                android:paddingLeft="20px"
                android:paddingRight="20px"
            android:layout_marginTop="5px"
                 />
            
            

            <EditText
                android:id="@+id/confirmPasswordEt"
                android:layout_width="650px"
                android:layout_height="100px"
                android:hint="@string/confirm_password"
                android:singleLine="true"
                android:textSize="34px" 
                android:textColor="@color/black"
                android:inputType="textPassword"
            	android:background="@drawable/white_bg_rounded"
                android:paddingLeft="20px"
                android:paddingRight="20px"
            android:layout_marginTop="5px"
                 />
            
            
            <EditText
                android:id="@+id/referralCodeEt"
                android:layout_width="650px"
                android:layout_height="100px"
                android:hint="Referral Code (Optional)"
                android:singleLine="true"
                android:textSize="34px" 
                android:textColor="@color/black"
            	android:background="@drawable/white_bg_rounded"
                android:capitalize="words"
                android:paddingLeft="20px"
                android:paddingRight="20px"
            android:layout_marginTop="5px"
                 />
            
            
        </LinearLayout>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="648px"
            android:layout_height="99px"
            android:layout_marginTop="45px"
            android:background="@drawable/blue_btn_selector"
            android:text="REGISTER"
            android:textColor="@drawable/white_color_selector"
                        android:textSize="@dimen/button_text_size" 
         />
        
        
        
        <TextView
                android:id="@+id/extraTextForScroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:textColor="@color/white"
                android:text="      "
                android:textSize="10px"
                
                />
        
    </LinearLayout>
    </ScrollView>
    


</LinearLayout>